# MBIMGUI

./: .gitignore  .gitmodules  Build.bat  CMakeLists.txt  ComPortMgr.h  DemoWindow.h  Doxyfile  GenerateDoc.bat  MBICircularBuffer.h  MBILogger.h  MBIMGUI.h  MBISyncCircularBuffer.h  MBIWindow.h  README.md  TestWindow.h  main.cpp
Includes/: MBICircularBuffer.h  MBIFileDialog.h  MBILogger.h  MBIMGUI.h  MBIOption.h  MBIPlotChart.h  MBIRealtimePlotChart.h  MBISyncCircularBuffer.h  MBIWindow.h  SpiedDataPoint.h
Sources/: MBILogWindow.h  MBILogger.cpp  MBIMGUI.cpp  MBIMGUI.h  MBIMGUI_style.h  MBIMNG.cpp  MBIPlotChart.cpp  MBIRealtimePlotChart.cpp  MBIWindow.cpp  MBIWindow.h
Sources/Renderers/: Dx12Renderer.cpp  Dx12Renderer.h  Renderer.h  Win32Renderer.cpp  Win32Renderer.h
Sources/Widgets/: MBIFileDialog.cpp  imgui_combowithfilter.cpp  imgui_toggle.cpp  imspinner.cpp
cmake/: FindImgui.cmake  MBIMGUIConfig.cmake  components.manifest
example/: CMakeLists.txt  ImGui.ini  main.cpp
example/etc/: pref.conf
imgui/: Update.bat
